--- a/Home.html
+++ b/Home.html
@@ -68,7 +68,7 @@
         <div class="u-gutter-0 u-layout">
           <div class="u-layout-row">
             <div class="u-container-style u-layout-cell u-palette-2-light-3 u-size-15 u-size-30-md u-layout-cell-1">
-              <div class="u-container-layout u-valign-top-sm u-valign-top-xs u-container-layout-2"><span class="u-align-right u-file-icon u-icon u-icon-1"><img src="images/manual.png" alt=""></span><span class="u-align-left u-file-icon u-grey-70 u-icon u-icon-circle u-icon-2"><img src="images/3.png" alt=""></span>
+              <div class="u-container-layout u-valign-top-sm u-valign-top-xs u-container-layout-2"><span class="u-align-right u-file-icon u-icon u-icon-1"><img src="images/manual.png" alt=""></span><span class="u-align-left u-file-icon u-grey-70 u-icon u-icon-circle u-icon-2"><img src="images/1.png" alt=""></span>
                 <p class="u-text u-text-4">
                   <span style="font-size: 1.5rem;">Life's Manual: Who You Are &amp; Who You Will Become<br>
                   </span>
@@ -78,7 +78,7 @@
               </div>
             </div>
             <div class="u-container-style u-layout-cell u-palette-2-light-2 u-size-15 u-size-30-md u-layout-cell-2">
-              <div class="u-container-layout u-container-layout-3"><span class="u-file-icon u-icon u-icon-3"><img src="images/lids.png" alt=""></span><span class="u-file-icon u-icon u-icon-4"><img src="images/checked_circle.png" alt=""></span>
+              <div class="u-container-layout u-container-layout-3"><span class="u-file-icon u-icon u-icon-3"><img src="images/lids.png" alt=""></span><span class="u-file-icon u-icon u-icon-4"><img src="images/circle_checked.png" alt=""></span>
                 <p class="u-text u-text-5">
                   <span style="font-size: 24px;" class="u-text-palette-1-dark-2">
                     <font color="#111111">Adaptive Lids, fits many STEM bowls</font>
@@ -93,7 +93,7 @@
               </div>
             </div>
             <div class="u-container-style u-layout-cell u-palette-2-light-3 u-size-15 u-size-30-md u-layout-cell-3">
-              <div class="u-container-layout u-container-layout-4"><span class="u-file-icon u-icon u-icon-5"><img src="images/laser.png" alt=""></span><span class="u-file-icon u-grey-70 u-icon u-icon-circle u-icon-6"><img src="images/3.png" alt=""></span>
+              <div class="u-container-layout u-container-layout-4"><span class="u-file-icon u-icon u-icon-5"><img src="images/laser.png" alt=""></span><span class="u-file-icon u-grey-70 u-icon u-icon-circle u-icon-6"><img src="images/1.png" alt=""></span>
                 <p class="u-text u-text-6">
                   <span style="font-size: 24px;" class="u-text-palette-1-dark-2">
                     <font color="#111111">Line Laser Pointer for Career</font>
@@ -108,7 +108,7 @@
               </div>
             </div>
             <div class="u-container-style u-layout-cell u-palette-2-light-2 u-size-15 u-size-30-md u-layout-cell-4">
-              <div class="u-container-layout u-container-layout-5"><span class="u-align-right u-file-icon u-icon u-icon-7"><img src="images/makeup.png" alt=""></span><span class="u-file-icon u-icon u-icon-8"><img src="images/checked_circle.png" alt=""></span>
+              <div class="u-container-layout u-container-layout-5"><span class="u-align-right u-file-icon u-icon u-icon-7"><img src="images/makeup.png" alt=""></span><span class="u-file-icon u-icon u-icon-8"><img src="images/circle_checked.png" alt=""></span>
                 <p class="u-align-left u-text u-text-7">
                   <span style="font-size: 24px;" class="u-text-palette-1-dark-2">
                     <font color="#111111">Make-Up</font>
@@ -181,7 +181,7 @@
           <div class="u-gutter-0 u-layout">
             <div class="u-layout-row">
               <div class="u-container-style u-layout-cell u-size-60 u-white u-layout-cell-1">
-                <div class="u-container-layout u-container-layout-1"><span class="u-file-icon u-icon u-spacing-18 u-text-palette-1-base u-icon-1"><img src="images/1.png" alt=""></span>
+                <div class="u-container-layout u-container-layout-1"><span class="u-file-icon u-icon u-spacing-18 u-text-palette-1-base u-icon-1"><img src="images/2.png" alt=""></span>
                   <h4 class="u-align-center u-text u-text-1">EDUCATION</h4>
                   <p class="u-align-center u-text u-text-black u-text-2">M.S. in Data Science.<br>City University of New York,<br>2021.<br>
                     <br>B.S. in Applied Mathematics.<br>City College of New York,<br>2015.<br>
@@ -196,13 +196,13 @@
           <div class="u-gutter-0 u-layout">
             <div class="u-layout-row">
               <div class="u-container-style u-layout-cell u-size-60 u-white u-layout-cell-2">
-                <div class="u-container-layout u-container-layout-2"><span class="u-align-center u-file-icon u-icon u-icon-rectangle u-spacing-18 u-text-palette-1-base u-icon-2"><img src="images/5.png" alt=""></span>
+                <div class="u-container-layout u-container-layout-2"><span class="u-align-center u-file-icon u-icon u-icon-rectangle u-spacing-18 u-text-palette-1-base u-icon-2"><img src="images/3.png" alt=""></span>
                   <h4 class="u-align-center u-text u-text-3">TECHNICAL SKILLS</h4>
                   <div class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-table u-table-responsive u-table-1">
                     <table class="u-table-entity">
                       <colgroup>
-                        <col width="75.45%">
-                        <col width="24.55%">
+                        <col width="74.35%">
+                        <col width="25.65%">
                       </colgroup>
                       <tbody class="u-align-left u-table-body u-table-body-1">
                         <tr style="height: 45px;">
@@ -273,7 +273,7 @@
           <div class="u-gutter-0 u-layout">
             <div class="u-layout-row">
               <div class="u-container-style u-layout-cell u-size-60 u-white u-layout-cell-3">
-                <div class="u-container-layout u-container-layout-9"><span class="u-file-icon u-icon u-text-palette-1-base u-icon-3"><img src="images/6.png" alt=""></span>
+                <div class="u-container-layout u-container-layout-9"><span class="u-file-icon u-icon u-text-palette-1-base u-icon-3"><img src="images/4.png" alt=""></span>
                   <h4 class="u-align-center u-text u-text-4">ANALYTICAL PROJECTS</h4>
                   <p class="u-align-center u-text u-text-5">From <i>areospace</i> to <i>psychology</i>.<br>From <i>inferential statistics</i> to <i>ensemble machine learning</i>.<br>Housing on GitHub, Rpub, Heroku, Shiny, etc.<br>
                   </p>
@@ -286,7 +286,7 @@
           <div class="u-gutter-0 u-layout">
             <div class="u-layout-row">
               <div class="u-container-style u-layout-cell u-size-60 u-white u-layout-cell-4">
-                <div class="u-container-layout u-container-layout-10"><span class="u-file-icon u-icon u-text-palette-1-base u-icon-4"><img src="images/7.png" alt=""></span>
+                <div class="u-container-layout u-container-layout-10"><span class="u-file-icon u-icon u-text-palette-1-base u-icon-4"><img src="images/5.png" alt=""></span>
                   <h4 class="u-align-center u-text u-text-6">EMPLOYMENT</h4>
                   <p class="u-align-center u-text u-text-black u-text-7">Lockheed Martin - Present<br>
                     <br>
@@ -470,7 +470,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
       </div>
     </section>
     <section class="u-clearfix u-gradient u-section-6" id="sec-2b53">
-      <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-xl u-sheet-1">
+      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <div class="u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
           <div class="u-gutter-0 u-layout">
             <div class="u-layout-row">
@@ -485,13 +485,13 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
               <div class="u-align-left-sm u-align-left-xs u-align-right-lg u-align-right-md u-align-right-xl u-container-style u-layout-cell u-right-cell u-size-30 u-layout-cell-2">
                 <div class="u-container-layout u-valign-middle u-container-layout-2">
                   <div class="u-social-icons u-spacing-20 u-social-icons-1">
-                    <a class="u-social-url" target="_blank" data-type="Custom" title="LinkedIn" href="https://www.linkedin.com/in/samantha-deokinanan-35766295/"><span class="u-icon u-social-custom u-social-icon u-icon-1"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 512 512" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-2804"></use></svg><svg class="u-svg-content" viewBox="0 0 512 512" id="svg-2804"><path d="m256 0c-141.363281 0-256 114.636719-256 256s114.636719 256 256 256 256-114.636719 256-256-114.636719-256-256-256zm-74.390625 387h-62.347656v-187.574219h62.347656zm-31.171875-213.1875h-.40625c-20.921875 0-34.453125-14.402344-34.453125-32.402344 0-18.40625 13.945313-32.410156 35.273437-32.410156 21.328126 0 34.453126 14.003906 34.859376 32.410156 0 18-13.53125 32.402344-35.273438 32.402344zm255.984375 213.1875h-62.339844v-100.347656c0-25.21875-9.027343-42.417969-31.585937-42.417969-17.222656 0-27.480469 11.601563-31.988282 22.800781-1.648437 4.007813-2.050781 9.609375-2.050781 15.214844v104.75h-62.34375s.816407-169.976562 0-187.574219h62.34375v26.558594c8.285157-12.78125 23.109375-30.960937 56.1875-30.960937 41.019531 0 71.777344 26.808593 71.777344 84.421874zm0 0"></path></svg></span>
+                    <a class="u-social-url" target="_blank" data-type="Custom" title="LinkedIn" href="https://www.linkedin.com/in/samantha-deokinanan-35766295/"><span class="u-file-icon u-icon u-social-custom u-social-icon u-icon-1"><img src="images/linkedin.png" alt=""></span>
                     </a>
-                    <a class="u-social-url" title="RedBubble" target="_blank" href="https://www.redbubble.com/people/greeneyefirefly/shop"><span class="u-file-icon u-icon u-social-facebook u-social-icon u-icon-2"><img src="images/redbubble.png" alt=""></span>
+                    <a class="u-social-url" title="Redbubble" target="_blank" href="https://www.redbubble.com/people/greeneyefirefly/shop"><span class="u-file-icon u-icon u-social-custom u-social-icon u-icon-2"><img src="images/redbubble.png" alt=""></span>
                     </a>
-                    <a class="u-social-url" title="GitHub" target="_blank" href="https://github.com/greeneyefirefly"><span class="u-file-icon u-icon u-social-icon u-social-twitter u-icon-3"><img src="images/github.png" alt=""></span>
+                    <a class="u-social-url" target="_blank" data-type="Custom" title="Instagram" href="https://www.instagram.com/sam13hope_life/"><span class="u-file-icon u-icon u-social-custom u-social-icon u-icon-3"><img src="images/instagram.png" alt=""></span>
                     </a>
-                    <a class="u-social-url" title="Instagram" target="_blank" href="https://www.instagram.com/sam13hope_life/"><span class="u-icon u-social-icon u-social-instagram u-icon-4"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 512 512" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-ddc9"></use></svg><svg class="u-svg-content" viewBox="0 0 512 512" id="svg-ddc9"><path d="m305 256c0 27.0625-21.9375 49-49 49s-49-21.9375-49-49 21.9375-49 49-49 49 21.9375 49 49zm0 0"></path><path d="m370.59375 169.304688c-2.355469-6.382813-6.113281-12.160157-10.996094-16.902344-4.742187-4.882813-10.515625-8.640625-16.902344-10.996094-5.179687-2.011719-12.960937-4.40625-27.292968-5.058594-15.503906-.707031-20.152344-.859375-59.402344-.859375-39.253906 0-43.902344.148438-59.402344.855469-14.332031.65625-22.117187 3.050781-27.292968 5.0625-6.386719 2.355469-12.164063 6.113281-16.902344 10.996094-4.882813 4.742187-8.640625 10.515625-11 16.902344-2.011719 5.179687-4.40625 12.964843-5.058594 27.296874-.707031 15.5-.859375 20.148438-.859375 59.402344 0 39.25.152344 43.898438.859375 59.402344.652344 14.332031 3.046875 22.113281 5.058594 27.292969 2.359375 6.386719 6.113281 12.160156 10.996094 16.902343 4.742187 4.882813 10.515624 8.640626 16.902343 10.996094 5.179688 2.015625 12.964844 4.410156 27.296875 5.0625 15.5.707032 20.144532.855469 59.398438.855469 39.257812 0 43.90625-.148437 59.402344-.855469 14.332031-.652344 22.117187-3.046875 27.296874-5.0625 12.820313-4.945312 22.953126-15.078125 27.898438-27.898437 2.011719-5.179688 4.40625-12.960938 5.0625-27.292969.707031-15.503906.855469-20.152344.855469-59.402344 0-39.253906-.148438-43.902344-.855469-59.402344-.652344-14.332031-3.046875-22.117187-5.0625-27.296874zm-114.59375 162.179687c-41.691406 0-75.488281-33.792969-75.488281-75.484375s33.796875-75.484375 75.488281-75.484375c41.6875 0 75.484375 33.792969 75.484375 75.484375s-33.796875 75.484375-75.484375 75.484375zm78.46875-136.3125c-9.742188 0-17.640625-7.898437-17.640625-17.640625s7.898437-17.640625 17.640625-17.640625 17.640625 7.898437 17.640625 17.640625c-.003906 9.742188-7.898437 17.640625-17.640625 17.640625zm0 0"></path><path d="m256 0c-141.363281 0-256 114.636719-256 256s114.636719 256 256 256 256-114.636719 256-256-114.636719-256-256-256zm146.113281 316.605469c-.710937 15.648437-3.199219 26.332031-6.832031 35.683593-7.636719 19.746094-23.246094 35.355469-42.992188 42.992188-9.347656 3.632812-20.035156 6.117188-35.679687 6.832031-15.675781.714844-20.683594.886719-60.605469.886719-39.925781 0-44.929687-.171875-60.609375-.886719-15.644531-.714843-26.332031-3.199219-35.679687-6.832031-9.8125-3.691406-18.695313-9.476562-26.039063-16.957031-7.476562-7.339844-13.261719-16.226563-16.953125-26.035157-3.632812-9.347656-6.121094-20.035156-6.832031-35.679687-.722656-15.679687-.890625-20.6875-.890625-60.609375s.167969-44.929688.886719-60.605469c.710937-15.648437 3.195312-26.332031 6.828125-35.683593 3.691406-9.808594 9.480468-18.695313 16.960937-26.035157 7.339844-7.480469 16.226563-13.265625 26.035157-16.957031 9.351562-3.632812 20.035156-6.117188 35.683593-6.832031 15.675781-.714844 20.683594-.886719 60.605469-.886719s44.929688.171875 60.605469.890625c15.648437.710937 26.332031 3.195313 35.683593 6.824219 9.808594 3.691406 18.695313 9.480468 26.039063 16.960937 7.476563 7.34375 13.265625 16.226563 16.953125 26.035157 3.636719 9.351562 6.121094 20.035156 6.835938 35.683593.714843 15.675781.882812 20.683594.882812 60.605469s-.167969 44.929688-.886719 60.605469zm0 0"></path></svg></span>
+                    <a class="u-social-url" title="GitHub" target="_blank" href="https://github.com/greeneyefirefly"><span class="u-file-icon u-icon u-social-custom u-social-icon u-icon-4"><img src="images/github.png" alt=""></span>
                     </a>
                     <a class="u-social-url" target="_blank" data-type="Custom" title="Google Scholar" href="https://scholar.google.com/scholar?q=author:%22Deokinanan%20Samantha%22"><span class="u-file-icon u-icon u-social-custom u-social-icon u-icon-5"><img src="images/google_scholar.png" alt=""></span>
                     </a>
@@ -506,7 +506,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
     
     
     <footer class="u-align-center u-clearfix u-footer u-palette-5-light-1 u-footer" id="sec-5185"><div class="u-align-left u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <p class="u-align-center-xs u-text u-text-1">All Work&nbsp;<span class="u-file-icon u-icon u-text-grey-70 u-icon-1"><img src="images/9.png" alt=""></span> Samantha Deokinanan 2022. All rights reserved.
+        <p class="u-align-center-xs u-text u-text-1">All Work&nbsp;<span class="u-file-icon u-icon u-text-grey-70 u-icon-1"><img src="images/6.png" alt=""></span> Samantha Deokinanan 2022. All rights reserved.
         </p>
       </div></footer>
   
