--- a/Home.html
+++ b/Home.html
@@ -476,8 +476,8 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
             <div class="u-layout-row">
               <div class="u-align-left u-container-style u-layout-cell u-left-cell u-size-30 u-layout-cell-1">
                 <div class="u-container-layout u-container-layout-1">
-                  <h2 class="u-text u-text-default u-text-1">Contact</h2>
-                  <p class="u-text u-text-2">Feel free to reach out to me via any of the following platforms.<br>
+                  <h3 class="u-text u-text-default u-text-1">Accompany me on my journey!</h3>
+                  <p class="u-text u-text-2">To learn and support specific sides of me, please visit the following platforms. <br>
                     <br>Thank you!
                   </p>
                 </div>
