--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <meta name="theme-color" content="#e84a90">
     <meta property="og:type" content="website">
   </head>
-  <body class="u-body u-xl-mode">
+  <body data-home-page="Home.html" data-home-page-title="Home" class="u-body u-xl-mode">
     <section class="u-align-center u-clearfix u-gradient u-valign-middle u-section-1" id="carousel_800e">
       <div class="u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
         <div class="u-gutter-0 u-layout">
@@ -499,6 +499,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
         </div>
       </div>
     </section>
+    
     
     <footer class="u-align-center u-clearfix u-footer u-palette-5-light-1 u-footer" id="sec-5185"><div class="u-align-left u-clearfix u-sheet u-valign-middle u-sheet-1">
         <p class="u-align-center-xs u-text u-text-1">All Work&nbsp;<span class="u-file-icon u-icon u-text-grey-70 u-icon-1"><img src="images/6.png" alt=""></span> Samantha Deokinanan 2022. All rights reserved.
