--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <meta name="theme-color" content="#e84a90">
     <meta property="og:type" content="website">
   </head>
-  <body data-home-page="Home.html" data-home-page-title="Home" class="u-body u-xl-mode">
+  <body class="u-body u-xl-mode">
     <section class="u-align-center u-clearfix u-gradient u-valign-middle u-section-1" id="carousel_800e">
       <div class="u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
         <div class="u-gutter-0 u-layout">
