--- a/index.html
+++ b/index.html
@@ -465,21 +465,19 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
         </div>
       </div>
     </section>
-    <section class="u-clearfix u-gradient u-section-6" id="sec-2b53">
-      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <div class="u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
+<section class="u-clearfix u-gradient u-section-6" id="sec-2b53">
+      <div class="u-clearfix u-sheet u-sheet-1">
+        <img class="u-image u-image-circle u-image-1" src="images/SakuraMatsuri-BK-2016.JPG" alt="" data-image-width="1600" data-image-height="1200">
+        <div class="u-clearfix u-gutter-100 u-layout-wrap u-layout-wrap-1">
           <div class="u-gutter-0 u-layout">
             <div class="u-layout-row">
-              <div class="u-align-left u-container-style u-layout-cell u-left-cell u-size-30 u-layout-cell-1">
-                <div class="u-container-layout u-container-layout-1">
-                  <h3 class="u-text u-text-default u-text-1"> Accompany me on my journey!</h3>
-                  <p class="u-text u-text-2"> To learn and support specific sides of me, please visit the following platforms.<br>
-                    <br>Thank you!
+              <div class="u-container-style u-layout-cell u-left-cell u-size-60 u-layout-cell-1">
+                <div class="u-container-layout u-valign-middle u-container-layout-1">
+                  <h3 class="u-align-left u-text u-text-default u-text-1">Meet the ​Enthusiast?<br>
+                    <span style="font-size: 1.5rem;">Accompany me on my journey!</span>
+                  </h3>
+                  <p class="u-align-center u-text u-text-2"> To learn and support specific sides of me, please visit the following platforms.<br>
                   </p>
-                </div>
-              </div>
-              <div class="u-align-left-sm u-align-left-xs u-align-right-lg u-align-right-md u-align-right-xl u-container-style u-layout-cell u-right-cell u-size-30 u-layout-cell-2">
-                <div class="u-container-layout u-valign-middle u-container-layout-2">
                   <div class="u-social-icons u-spacing-20 u-social-icons-1">
                     <a class="u-social-url" target="_blank" data-type="Custom" title="LinkedIn" href="https://www.linkedin.com/in/samantha-deokinanan-35766295/"><span class="u-file-icon u-icon u-social-custom u-social-icon u-icon-1"><img src="images/linkedin.png" alt=""></span>
                     </a>
@@ -499,6 +497,8 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
         </div>
       </div>
     </section>
+	
+
     
     
     <footer class="u-align-center u-clearfix u-footer u-palette-5-light-1 u-footer" id="sec-5185"><div class="u-align-left u-clearfix u-sheet u-valign-middle u-sheet-1">
