--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                         <td class="u-align-right u-table-cell u-table-cell-12">5 / 5</td>
                       </tr>
                       <tr style="height: 45px;">
-                        <td class="u-table-cell u-table-cell-13">Model, Simulation</td>
+                        <td class="u-table-cell u-table-cell-13">Modeling</td>
                         <td class="u-align-right u-table-cell u-table-cell-14">4 / 5</td>
                       </tr>
                     </tbody>
