--- a/index.html
+++ b/index.html
@@ -154,13 +154,13 @@
             <div class="u-align-left u-container-style u-list-item u-palette-2-base u-repeater-item u-shape-rectangle u-list-item-2">
               <div class="u-container-layout u-similar-container u-container-layout-3">
                 <h5 class="u-text u-text-7">an artist</h5>
-                <p class="u-text u-text-8">"Shake up your heart."</p>
+                <p class="u-text u-text-8"><i>니 맘을 흔들어</i>- art concept<br>("Shake up your heart" - lyrics from Everybody by SHINee).</p>
               </div>
             </div>
             <div class="u-align-left u-container-style u-list-item u-palette-2-base u-repeater-item u-shape-rectangle u-list-item-3">
               <div class="u-container-layout u-similar-container u-container-layout-4">
                 <h5 class="u-text u-text-9"> an Enthusiast</h5>
-                <p class="u-text u-text-10"> "To immerse yourself in something you like, that's what it means to enjoy something fully."</p>
+                <p class="u-text u-text-10"> "To immerse yourself in something you like, that's what it means to enjoy something fully."- Teppei Kiyoshi, 黒子のバスケ (Kuroko's Basketball)</p>
               </div>
             </div>
           </div>
@@ -203,7 +203,7 @@
         <div class="u-gutter-0 u-layout">
           <div class="u-layout-row">
             <div class="u-container-style u-layout-cell u-size-60 u-white u-layout-cell-1">
-              <div class="u-container-layout u-container-layout-8"><span class="u-file-icon u-icon u-text-palette-1-base u-icon-1"><img src="images/2.png" alt=""></span>
+              <div class="u-container-layout u-container-layout-8"><span class="u-file-icon u-icon u-text-palette-1-base u-icon-1"><img src="images/5.png" alt=""></span>
                 <h4 class="u-align-center u-text u-text-2">EMPLOYMENT</h4>
                 <p class="u-align-center u-text u-text-black u-text-3">Lockheed Martin - Present<br>
                   <br>
@@ -219,9 +219,9 @@
         <div class="u-gutter-0 u-layout">
           <div class="u-layout-row">
             <div class="u-container-style u-layout-cell u-size-60 u-white u-layout-cell-2">
-              <div class="u-container-layout u-container-layout-9"><span class="u-file-icon u-icon u-text-palette-1-base u-icon-2"><img src="images/3.png" alt=""></span>
+              <div class="u-container-layout u-container-layout-9"><span class="u-file-icon u-icon u-text-palette-1-base u-icon-2"><img src="images/4.png" alt=""></span>
                 <h4 class="u-align-center u-text u-text-4">ANALYTICAL PROJECTS</h4>
-                <p class="u-align-center u-text u-text-5">From <i>areospace</i> to <i>psychology</i>.<br>From <i>inferential statistics</i> to <i>ensemble machine learning</i>.<br>Housing on GitHub, Rpub, Heroku, Shiny, etc.<br>
+                <p class="u-align-center u-text u-text-5">From <i>aerospace</i> to <i>psychology</i>.<br>From <i>inferential statistics</i> to <i>ensemble machine learning</i>.<br>Housing on GitHub, Rpub, Heroku, Shiny, etc.<br>
                 </p>
               </div>
             </div>
@@ -236,7 +236,7 @@
         <div class="u-gutter-0 u-layout">
           <div class="u-layout-row">
             <div class="u-container-style u-layout-cell u-size-60 u-white u-layout-cell-3">
-              <div class="u-container-layout u-container-layout-10"><span class="u-align-center u-file-icon u-icon u-icon-rectangle u-spacing-18 u-text-palette-1-base u-icon-3"><img src="images/4.png" alt=""></span>
+              <div class="u-container-layout u-container-layout-10"><span class="u-align-center u-file-icon u-icon u-icon-rectangle u-spacing-18 u-text-palette-1-base u-icon-3"><img src="images/3.png" alt=""></span>
                 <h4 class="u-align-center u-text u-text-6">TECHNICAL SKILLS</h4>
                 <div class="u-expanded-width-lg u-expanded-width-md u-table u-table-responsive u-table-1">
                   <table class="u-table-entity">
@@ -285,7 +285,7 @@
         <div class="u-gutter-0 u-layout">
           <div class="u-layout-row">
             <div class="u-align-center u-container-style u-layout-cell u-size-60 u-white u-layout-cell-4">
-              <div class="u-container-layout u-container-layout-11"><span class="u-file-icon u-icon u-spacing-18 u-text-palette-1-base u-icon-4"><img src="images/5.png" alt=""></span>
+              <div class="u-container-layout u-container-layout-11"><span class="u-file-icon u-icon u-spacing-18 u-text-palette-1-base u-icon-4"><img src="images/2.png" alt=""></span>
                 <h4 class="u-text u-text-7">EDUCATION</h4>
                 <p class="u-text u-text-8"> M.S. in Data Science.<br>City University of New York,<br> 2021.<br>
                   <br>B.S. in Applied Mathematics.<br>City College of New York,<br> 2015.<br>
